# training-rust

./: Cargo.toml  README.md
lesson10/: Cargo.toml
lesson10/src/: main.rs
lesson11/: Cargo.toml
lesson11/src/: main.rs
lesson2/: Cargo.toml
lesson2/src/: main.rs
lesson3/: Cargo.toml
lesson3/src/: main.rs
lesson4/src/: main.rs
lesson5/: Cargo.toml  poem.txt  test.txt
lesson5/src/: main.rs
lesson6/: Cargo.toml  newfile.txt  newfilebuf.txt
lesson6/src/: main.rs
lesson7/: Cargo.toml
lesson7/src/: data_center.rs  datacenterimpl.rs  linux.rs  macos.rs  main.rs  virtual_machine.rs  vm_trait.rs  vm_trait_controller.rs  vm_type.rs
lesson8/: Cargo.toml
lesson8/src/: main.rs
lesson9/: Cargo.toml
lesson9/src/: main.rs
sqoinlib/: Cargo.toml
sqoinlib/src/: halima.rs  lib.rs
sqoinrust/: Cargo.toml
sqoinrust/src/: khouloud.rs  main.rs
sqoinrust/src/jawaher/: jawaherimpl.rs  mod.rs
tcpclient/: app.js  index.js  package.json
